fix arrow overlap with newsletter on mobile

--- a/src/components/Hero/hero.module.css
+++ b/src/components/Hero/hero.module.css
@@ -60,7 +60,7 @@
   right: 20px;
   width: 28px;
   height: 28px;
-  z-index: 10;
+  /* z-index: 10; */
   background-color: transparent;
   transform: rotate(45deg);
   border-bottom: 2px solid #fff;
